--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-ktor_version=1.6.7
-kotlin_version=1.9.22
-logback_version=1.4.11
+ktorVersion=1.6.7
+kotlinVersion=1.9.22
+logbackVersion=1.4.11
+koinVersion=3.1.3
 kotlin.code.style=official
